--- a/css/js.css
+++ b/css/js.css
@@ -3,3 +3,9 @@ h1{
 font-family: 'Gloria Hallelujah', cursive;
 font-size: 35px;
 text-align: center;
+}
+p{
+  font-family: 'Gloria Hallelujah', cursive;
+  font-size: 20px;
+  text-align: center;
+}
