added  a maroon color to the header

--- a/css/js.css
+++ b/css/js.css
@@ -3,6 +3,7 @@ h1{
 font-family: 'Gloria Hallelujah', cursive;
 font-size: 35px;
 text-align: center;
+color: maroon;
 }
 p{
   font-family: 'Gloria Hallelujah', cursive;
