added some changes in colors

--- a/css/js.css
+++ b/css/js.css
@@ -10,3 +10,9 @@ p{
   font-size: 20px;
   text-align: center;
 }
+.button{
+  display: flex; justify-content: center;
+}
+body{
+  background-color: grey;
+}
