--- a/css/js.css
+++ b/css/js.css
@@ -1,4 +1,10 @@
-
+@import url('https://fonts.googleapis.com/css?family=Yantramanav:100');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400');
+html,body{
+  height:100%;
+  widith:100%;
+  
+}
 
 }
 p{
