adds js.css file

--- a/css/js.css
+++ b/css/js.css
@@ -2,7 +2,7 @@ body{
   height:100%;
   width:100%;
   align-content: center;
-  background-image: url(https://afinde-production.s3.amazonaws.com/uploads/c21cd981-cce3-4b5e-aefd-151801706fcb.gif);
+  background-image: url(https://media1.tenor.com/images/53840498f0a596c7d71a827ede1bb99c/tenor.gif?itemid=12403122);
 }
 .intro{
   height: 100%;
